# audio-to-text

./: Cargo.toml  README.md
src/: delegate.rs  layout.rs  main.rs  state.rs  transcriber.rs
